--- a/index.html
+++ b/index.html
@@ -4,40 +4,93 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>NourishWise</title>
 
+  <link rel="icon" href="assets/diet_logo_t.png">
   <link rel="stylesheet" href="styles/style.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMDE8cvdRa7zBbb4T3N6g5RhiB2V1Knq8MkHx6" crossorigin="anonymous">
+
+  <script src="https://kit.fontawesome.com/f70dd16b18.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+  <button>
+    <i class="fas fa-check"></i> Submit
+  </button>
+  <p>
+    Follow us on <i class="fab fa-facebook"></i> <i class="fab fa-twitter"></i>
+  </p>
   <header>
     <nav>
       <div class="logo">
         <img src="assets/diet_logo_t.png" alt="">
+        <i class="far fa-heart"></i> <!-- Regular Heart Icon -->
       </div>
       <ul>
+        <i class="fas fa-coffee"></i> <!-- Solid Coffee Icon -->
+        <i class="fab fa-github"></i> <!-- Brand GitHub Icon -->
+
         <li><a href="">Home</a></li>
         <li><a href="">Diet Plan</a></li>
         <li><a href="">Insights</a></li>
         <li><a href="">Dieticians</a></li>
-        <li><a href="">Contact Us</a></li>
+        <li><a href="" class="btn">Contact Us</a></li>
       </ul>
       <div class="user-profile">
         <img src="assets/img-1.jpg" alt="user-profile">
       </div>
     </nav>
   </header>
+
+  <!-- =========================== HERO SECTION ===========================-->
   <section class="container hero">
-    <div class="hero-text">
-      <h1>NourishWise</h1>
-      <h3>Eat Smart, Live Well</h3>
-      <p>Your Journey to Wellness Start Here! </p>
-      <a href="">GET STARTED</a>
+    <div class="hero-bg">
+      <div class="hero-text">
+        <h1>NourishWise</h1>
+        <h3>Eat Smart, Live Well</h3>
+        <p>Your Journey to Wellness Start Here! </p>
+        <a href="" class="btn">GET STARTED</a>
+      </div>
     </div>
   </section>
+
   <main>
 
+    <!-- =========================== HERO SECTION ===========================-->
+    <section class="container features">
+      <header>
+        <h2>Why Choose NourishWise?</h2>
+      </header>
+      <div class="features-list">
+        <div class="feature-card">
+          <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
+          <div class="text">
+            <h4>Personalize Diet Plan</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+          </div>
+        </div>
+        <div class="feature-card">
+          <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
+          <div class="text">
+            <h4>Progress Tracking</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+          </div>
+        </div>
+        <div class="feature-card">
+          <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
+          <div class="text">
+            <h4>Personalize Diet Plan</h4>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
+
+  <script src="https://kit.fontawesome.com/f70dd16b18.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
