--- a/index.html
+++ b/index.html
@@ -1,96 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NourishWise</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NourishWise</title>
+    <link rel="icon" href="assets/diet_logo_t.png" />
+    <link rel="stylesheet" href="styles/style.css" />
 
-  <link rel="icon" href="assets/diet_logo_t.png">
-  <link rel="stylesheet" href="styles/style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMDE8cvdRa7zBbb4T3N6g5RhiB2V1Knq8MkHx6"
+      crossorigin="anonymous"
+    />
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMDE8cvdRa7zBbb4T3N6g5RhiB2V1Knq8MkHx6" crossorigin="anonymous">
+    <script
+      src="https://kit.fontawesome.com/f70dd16b18.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-  <script src="https://kit.fontawesome.com/f70dd16b18.js" crossorigin="anonymous"></script>
-</head>
+  <body>
+    <button><i class="fas fa-check"></i> Submit</button>
+    <p>
+      Follow us on <i class="fab fa-facebook"></i>
+      <i class="fab fa-twitter"></i>
+    </p>
+    <header>
+      <nav>
+        <div class="logo">
+          <img src="assets/diet_logo_t.png" alt="" />
+          <i class="far fa-heart"></i>
+          <!-- Regular Heart Icon -->
+        </div>
+        <ul>
+          <i class="fas fa-coffee"></i>
+          <!-- Solid Coffee Icon -->
+          <i class="fab fa-github"></i>
+          <!-- Brand GitHub Icon -->
 
-<body>
-  <button>
-    <i class="fas fa-check"></i> Submit
-  </button>
-  <p>
-    Follow us on <i class="fab fa-facebook"></i> <i class="fab fa-twitter"></i>
-  </p>
-  <header>
-    <nav>
-      <div class="logo">
-        <img src="assets/diet_logo_t.png" alt="">
-        <i class="far fa-heart"></i> <!-- Regular Heart Icon -->
-      </div>
-      <ul>
-        <i class="fas fa-coffee"></i> <!-- Solid Coffee Icon -->
-        <i class="fab fa-github"></i> <!-- Brand GitHub Icon -->
-
-        <li><a href="">Home</a></li>
-        <li><a href="">Diet Plan</a></li>
-        <li><a href="">Insights</a></li>
-        <li><a href="">Dieticians</a></li>
-        <li><a href="" class="btn">Contact Us</a></li>
-      </ul>
-      <div class="user-profile">
-        <img src="assets/img-1.jpg" alt="user-profile">
-      </div>
-    </nav>
-  </header>
-
-  <!-- =========================== HERO SECTION ===========================-->
-  <section class="container hero">
-    <div class="hero-bg">
-      <div class="hero-text">
-        <h1>NourishWise</h1>
-        <h3>Eat Smart, Live Well</h3>
-        <p>Your Journey to Wellness Start Here! </p>
-        <a href="" class="btn">GET STARTED</a>
-      </div>
-    </div>
-  </section>
-
-  <main>
+          <li><a href="">Home</a></li>
+          <li><a href="">Diet Plan</a></li>
+          <li><a href="">Insights</a></li>
+          <li><a href="">Dieticians</a></li>
+          <li><a href="" class="btn">Contact Us</a></li>
+        </ul>
+        <div class="user-profile">
+          <img src="assets/img-1.jpg" alt="user-profile" />
+        </div>
+      </nav>
+    </header>
 
     <!-- =========================== HERO SECTION ===========================-->
-    <section class="container features">
-      <header>
-        <h2>Why Choose NourishWise?</h2>
-      </header>
-      <div class="features-list">
-        <div class="feature-card">
-          <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
-          <div class="text">
-            <h4>Personalize Diet Plan</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
-          </div>
-        </div>
-        <div class="feature-card">
-          <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
-          <div class="text">
-            <h4>Progress Tracking</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
-          </div>
-        </div>
-        <div class="feature-card">
-          <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
-          <div class="text">
-            <h4>Personalize Diet Plan</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
-          </div>
+    <section class="container hero">
+      <div class="hero-bg">
+        <div class="hero-text">
+          <h1>NourishWise</h1>
+          <h3>Eat Smart, Live Well</h3>
+          <p>Your Journey to Wellness Start Here!</p>
+          <a href="" class="btn">GET STARTED</a>
         </div>
       </div>
     </section>
+    <!-- =========================== WELCOME SECTION ===========================-->
+    <article>
+      <div class="about">
+        <h2>Welcome to NourishWise!</h2>
+      </div>
+      <p class="aboutText">
+        NourishWise is your go-to app for finding personalized diet plans that
+        fit your lifestyle and health goals. Whether you're looking to lose
+        weight, gain muscle, or simply eat healthier, we offer a range of diet
+        plans designed by experienced dieticians just for you.
+        <br />
+        <strong>
+          Join a community of health-conscious individuals who are committed to
+          making positive changes in their lives through smart nutrition.
+        </strong>
+      </p>
+      <div class="diet-logo">
+        <img src="assets/diet_logo_t.png" alt="diet-logo" />
+      </div>
+    </article>
+    <main>
+      <!-- =========================== HERO SECTION ===========================-->
+      <section class="container features">
+        <header>
+          <h2>Why Choose NourishWise?</h2>
+        </header>
+        <div class="features-list">
+          <div class="feature-card">
+            <div class="img"><img src="assets/diet_logo_t.png" alt="" /></div>
+            <div class="text">
+              <h4>Personalize Diet Plan</h4>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Tempora, labore!
+              </p>
+            </div>
+          </div>
+          <div class="feature-card">
+            <div class="img"><img src="assets/diet_logo_t.png" alt="" /></div>
+            <div class="text">
+              <h4>Progress Tracking</h4>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Tempora, labore!
+              </p>
+            </div>
+          </div>
+          <div class="feature-card">
+            <div class="img"><img src="assets/diet_logo_t.png" alt="" /></div>
+            <div class="text">
+              <h4>Personalize Diet Plan</h4>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Tempora, labore!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
-  </main>
-
-  <script src="https://kit.fontawesome.com/f70dd16b18.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/f70dd16b18.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
