--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h1>NourishWise</h1>
           <h3>Eat Smart, Live Well</h3>
           <p>Your Journey to Wellness Start Here!</p>
-          <a href="" class="btn">GET STARTED</a>
+          <a href="sign-up.html" class="btn">GET STARTED</a>
         </div>
       </div>
     </section>
