--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
   <title>NourishWise</title>
 
   <link rel="icon" href="assets/diet_logo_t.png">
+
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="styles/style.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMDE8cvdRa7zBbb4T3N6g5RhiB2V1Knq8MkHx6" crossorigin="anonymous">
 
+  <!-- Fontawesome Icon link -->
   <script src="https://kit.fontawesome.com/f70dd16b18.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <button>
-    <i class="fas fa-check"></i> Submit
-  </button>
-  <p>
-    Follow us on <i class="fab fa-facebook"></i> <i class="fab fa-twitter"></i>
-  </p>
+
+  <!-- =========================== HEADER SECTION ===========================-->
   <header>
     <nav>
       <div class="logo">
-        <img src="assets/diet_logo_t.png" alt="">
-        <i class="far fa-heart"></i> <!-- Regular Heart Icon -->
+        <img src="assets/diet_logo_t.png" alt="NourishWise logo">
       </div>
       <ul>
+        
+        <!-- This is for testing to see if FontAwesome icons works -->
         <i class="fas fa-coffee"></i> <!-- Solid Coffee Icon -->
         <i class="fab fa-github"></i> <!-- Brand GitHub Icon -->
 
@@ -51,7 +51,10 @@
         <h1>NourishWise</h1>
         <h3>Eat Smart, Live Well</h3>
         <p>Your Journey to Wellness Start Here! </p>
-        <a href="" class="btn">GET STARTED</a>
+        <div class="btn action-btn">
+          <a href="">GET STARTED</a>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
       </div>
     </div>
   </section>
@@ -63,7 +66,10 @@
       <header>
         <h2>Why Choose NourishWise?</h2>
       </header>
+
+      <!-- Features List container -->
       <div class="features-list">
+        <!-- Feature card -->
         <div class="feature-card">
           <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
           <div class="text">
@@ -71,6 +77,8 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
           </div>
         </div>
+
+        <!-- Feature card -->
         <div class="feature-card">
           <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
           <div class="text">
@@ -78,6 +86,8 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
           </div>
         </div>
+
+        <!-- Feature card -->
         <div class="feature-card">
           <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
           <div class="text">
