I added the diet plan section

--- a/index.html
+++ b/index.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NourishWise</title>
 
-    <link rel="icon" href="assets/diet_logo_t.png" />
-    <link rel="stylesheet" href="styles/style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NourishWise</title>
 
-<<<<<<< HEAD
-  <link rel="icon" href="assets/diet_logo_t.png">
+  <link rel="icon" href="assets/diet_logo_t.png" />
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="styles/style.css">
-=======
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMDE8cvdRa7zBbb4T3N6g5RhiB2V1Knq8MkHx6"
-      crossorigin="anonymous"
-    />
->>>>>>> 87d5e109d559a1884c45c39c0b28412e0fad4de5
 
-    <script
-      src="https://kit.fontawesome.com/f70dd16b18.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMDE8cvdRa7zBbb4T3N6g5RhiB2V1Knq8MkHx6" crossorigin="anonymous" /> -->
 
-<<<<<<< HEAD
   <!-- Fontawesome Icon link -->
-  <script src="https://kit.fontawesome.com/f70dd16b18.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://kit.fontawesome.com/f70dd16b18.js" crossorigin="anonymous"></script> -->
 </head>
 
 <body>
@@ -42,7 +27,7 @@
         <img src="assets/diet_logo_t.png" alt="NourishWise logo">
       </div>
       <ul>
-        
+
         <!-- This is for testing to see if FontAwesome icons works -->
         <i class="fas fa-coffee"></i> <!-- Solid Coffee Icon -->
         <i class="fab fa-github"></i> <!-- Brand GitHub Icon -->
@@ -67,156 +52,120 @@
         <h3>Eat Smart, Live Well</h3>
         <p>Your Journey to Wellness Start Here! </p>
         <div class="btn action-btn">
-          <a href="">GET STARTED</a>
+          <a href="sign-up.html">GET STARTED</a>
           <i class="fa-solid fa-arrow-right"></i>
         </div>
       </div>
     </div>
   </section>
 
-  <main>
+  <!-- =========================== WELCOME SECTION ===========================-->
+  <section class="container about">
+    <div class="about-content">
+      <div class="text-content">
+        <div>
+          <!-- About header -->
+          <header>
+            <h2>Welcome to NourishWise!</h2>
+          </header>
 
-    <!-- =========================== HERO SECTION ===========================-->
-    <section class="container features">
-      <header>
-        <h2>Why Choose NourishWise?</h2>
-      </header>
-
-      <!-- Features List container -->
-      <div class="features-list">
-        <!-- Feature card -->
-        <div class="feature-card">
-          <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
-          <div class="text">
-            <h4>Personalize Diet Plan</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
-          </div>
-        </div>
-
-        <!-- Feature card -->
-        <div class="feature-card">
-          <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
-          <div class="text">
-            <h4>Progress Tracking</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
-          </div>
-        </div>
-
-        <!-- Feature card -->
-        <div class="feature-card">
-          <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
-          <div class="text">
-            <h4>Personalize Diet Plan</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
-          </div>
-=======
-  <body>
-    <button><i class="fas fa-check"></i> Submit</button>
-    <p>
-      Follow us on <i class="fab fa-facebook"></i>
-      <i class="fab fa-twitter"></i>
-    </p>
-    <header>
-      <nav>
-        <div class="logo">
-          <img src="assets/diet_logo_t.png" alt="" />
-          <i class="far fa-heart"></i>
-          <!-- Regular Heart Icon -->
-        </div>
-        <ul>
-          <i class="fas fa-coffee"></i>
-          <!-- Solid Coffee Icon -->
-          <i class="fab fa-github"></i>
-          <!-- Brand GitHub Icon -->
-
-          <li><a href="">Home</a></li>
-          <li><a href="">Diet Plan</a></li>
-          <li><a href="">Insights</a></li>
-          <li><a href="">Dieticians</a></li>
-          <li><a href="" class="btn">Contact Us</a></li>
-        </ul>
-        <div class="user-profile">
-          <img src="assets/img-1.jpg" alt="user-profile" />
-        </div>
-      </nav>
-    </header>
-
-    <!-- =========================== HERO SECTION ===========================-->
-    <section class="container hero">
-      <div class="hero-bg">
-        <div class="hero-text">
-          <h1>NourishWise</h1>
-          <h3>Eat Smart, Live Well</h3>
-          <p>Your Journey to Wellness Start Here!</p>
-          <a href="sign-up.html" class="btn">GET STARTED</a>
->>>>>>> 87d5e109d559a1884c45c39c0b28412e0fad4de5
+          <p class="aboutTxt">NourishWise is your go-to app for finding personalized diet plans that
+            fit your lifestyle and health goals. Whether you're looking to lose
+            weight, gain muscle, or simply eat healthier, we offer a range of diet
+            plans designed by experienced dieticians just for you.
+          </p>
+          <br />
+          <strong>
+            Join a community of health-conscious individuals who are committed to
+            making positive changes in their lives through smart nutrition.
+          </strong>
         </div>
       </div>
-    </section>
-    <!-- =========================== WELCOME SECTION ===========================-->
-    <article>
-      <div class="about">
-        <h2>Welcome to NourishWise!</h2>
-      </div>
-      <p class="aboutText">
-        NourishWise is your go-to app for finding personalized diet plans that
-        fit your lifestyle and health goals. Whether you're looking to lose
-        weight, gain muscle, or simply eat healthier, we offer a range of diet
-        plans designed by experienced dieticians just for you.
-        <br />
-        <strong>
-          Join a community of health-conscious individuals who are committed to
-          making positive changes in their lives through smart nutrition.
-        </strong>
-      </p>
       <div class="diet-logo">
         <img src="assets/diet_logo_t.png" alt="diet-logo" />
       </div>
-    </article>
-    <main>
-      <!-- =========================== HERO SECTION ===========================-->
-      <section class="container features">
-        <header>
-          <h2>Why Choose NourishWise?</h2>
-        </header>
-        <div class="features-list">
-          <div class="feature-card">
-            <div class="img"><img src="assets/diet_logo_t.png" alt="" /></div>
-            <div class="text">
-              <h4>Personalize Diet Plan</h4>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Tempora, labore!
-              </p>
-            </div>
-          </div>
-          <div class="feature-card">
-            <div class="img"><img src="assets/diet_logo_t.png" alt="" /></div>
-            <div class="text">
-              <h4>Progress Tracking</h4>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Tempora, labore!
-              </p>
-            </div>
-          </div>
-          <div class="feature-card">
-            <div class="img"><img src="assets/diet_logo_t.png" alt="" /></div>
-            <div class="text">
-              <h4>Personalize Diet Plan</h4>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Tempora, labore!
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
+    </div>
+  </section>
 
-    <script
-      src="https://kit.fontawesome.com/f70dd16b18.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <!-- =========================== HERO SECTION ===========================-->
+  <section class="container features">
+    <header>
+      <h2>Why Choose NourishWise?</h2>
+    </header>
+
+    <!-- Features List container -->
+    <div class="features-list">
+      <!-- Feature card -->
+      <div class="feature-card">
+        <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
+        <div class="text">
+          <h4>Personalize Diet Plan</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+        </div>
+      </div>
+
+      <!-- Feature card -->
+      <div class="feature-card">
+        <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
+        <div class="text">
+          <h4>Progress Tracking</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+        </div>
+      </div>
+
+      <!-- Feature card -->
+      <div class="feature-card">
+        <div class="img"><img src="assets/diet_logo_t.png" alt=""></div>
+        <div class="text">
+          <h4>Personalize Diet Plan</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- =========================== DIET PLAN SECTION ===========================-->
+  <section class="container dietPlan">
+    <header>
+      <h2>Explore Our Popular Diet Plans</h2>
+    </header>
+
+    <!-- Features List container -->
+    <div class="dietPlan-list">
+      <!-- Feature card -->
+      <div class="dietPlan-card">
+        <div class="img"><img src="assets/fresh-salad-wooden-bowl-lunch-generative-ai.jpg" alt=""></div>
+        <div class="text">
+          <h4>Keto Diet</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+        </div>
+      </div>
+
+      <!-- Feature card -->
+      <div class="dietPlan-card">
+        <div class="img"><img src="assets/fresh-vegetable-salad-with-grilled-meat-avocado-generative-ai.jpg" alt="">
+        </div>
+        <div class="text">
+          <h4>Mediatorial Diet </h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+        </div>
+      </div>
+
+      <!-- Diet Plan card -->
+      <div class="dietPlan-card">
+        <div class="img"><img src="assets/fresh-salad-wooden-bowl-lunch-generative-ai.jpg" alt=""></div>
+        <div class="text">
+          <h4>Vegan Diet</h4>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+        </div>
+      </div>
+    </div>
+    <a href="" class="btn">Explore More</a>
+  </section>
+
+  </main>
+
+  <script src="https://kit.fontawesome.com/f70dd16b18.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
