--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           <p>Sign up now and take the first step towards achieving your goals!</p>
         </div>
         <div class="right">
-          <a href="signup.html" class="cta-button">Get Started</a>
+          <a href="sign-up.html" class="cta-button">Get Started</a>
         </div>
       </div>
     </section>
