--- a/diet-plan.html
+++ b/diet-plan.html
@@ -9,7 +9,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="styles/siet-plan.css">
+  <link rel="stylesheet" href="styles/diet-plan.css">
 
   <!-- Fontawesome Icon link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -35,7 +35,7 @@
         <li><a href="#" id="active">Diet Plan</a></li>
         <li><a href="insight.html">Insights</a></li>
         <li><a href="detictian.html">Dieticians</a></li>
-        <li><a href="#" class="btn">Contact Us</a></li>
+        <li><a href="contactUs.html" class="btn">Contact Us</a></li>
       </ul>
       <div class="action-btn-container">
         <div class="user-profile">
