--- a/insight.html
+++ b/insight.html
@@ -62,7 +62,7 @@
         <li><a href="diet-plan.html">Diet Plan</a></li>
         <li><a href="#" id="active">Insights</a></li>
         <li><a href="dieticians.html">Dieticians</a></li>
-        <li><a href="contact.html" class="btn">Contact Us</a></li>
+        <li><a href="contactUs.html" class="btn">Contact Us</a></li>
       </ul>
       <div class="action-btn-container">
         <div class="user-profile">
