Added correct images to 'diet plan' page

--- a/diet-plan.html
+++ b/diet-plan.html
@@ -98,7 +98,7 @@
 
         <!-- Diet Plan card -->
         <div class="dietPlan-card">
-          <div class="img"><img src="assets/fresh-salad-wooden-bowl-lunch-generative-ai.jpg" alt=""></div>
+          <div class="img"><img src="assets/weight-loss.jpeg" alt=""></div>
           <div class="text">
             <h3>Weight Loss Plan</h3>
             <p>A balanced plan to help you shed those extra pounds.</p>
@@ -109,7 +109,7 @@
 
         <!-- Diet Plan card -->
         <div class="dietPlan-card">
-          <div class="img"><img src="assets/fresh-salad-wooden-bowl-lunch-generative-ai.jpg" alt=""></div>
+          <div class="img"><img src="assets/Keto-Diet.jpg" alt=""></div>
           <div class="text">
             <h3>Keto Diet</h3>
             <p>High-fat, low-carb meals to help your body enter ketosis.</p>
@@ -120,7 +120,7 @@
 
         <!-- Diet Plan card -->
         <div class="dietPlan-card">
-          <div class="img"><img src="assets/fresh-salad-wooden-bowl-lunch-generative-ai.jpg" alt=""></div>
+          <div class="img"><img src="assets/Mediterranean-diet.jpeg" alt=""></div>
           <div class="text">
             <h3>Mediterranean Diet</h3>
             <p>Rich in fruits, vegetables, and healthy fats for a balanced lifestyle.</p>
@@ -131,7 +131,7 @@
 
         <div class="dietPlan-card">
           <div class="img">
-            <img src="assets/fresh-salad-wooden-bowl-lunch-generative-ai.jpg" alt="Vegan Diet">
+            <img src="assets/vegan-diet.jpeg" alt="Vegan Diet">
           </div>
           <div class="text">
             <h3>Vegan Diet</h3>
