Added a 'coming soon' for the 'dieticians' page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </li>
           <li><a href="diet-plan.html">Diet Plan</a></li>
           <li><a href="insight.html">Insights</a></li>
-          <li><a href="">Dieticians</a></li>
+          <li><a href="dieticians.html">Dieticians</a></li>
           <li><a href="contactUs.html" class="btn">Contact Us</a></li>
         </ul>
         <div class="action-btn-container">
@@ -197,33 +197,24 @@
           <!-- Feature card -->
           <div class="dietPlan-card">
             <div class="img">
-              <img
-                src="assets/fresh-salad-wooden-bowl-lunch-generative-ai.jpg"
-                alt=""
-              />
+              <img src="assets/Keto-Diet.jpg" alt="" />
             </div>
             <div class="text">
               <h4>Keto Diet</h4>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Tempora, labore!
-              </p>
+              <p>High-fat, low-carb meals to help your body enter ketosis!</p>
             </div>
           </div>
 
           <!-- Feature card -->
           <div class="dietPlan-card">
             <div class="img">
-              <img
-                src="assets/fresh-vegetable-salad-with-grilled-meat-avocado-generative-ai.jpg"
-                alt=""
-              />
+              <img src="assets/Mediterranean-diet.jpeg" alt="" />
             </div>
             <div class="text">
               <h4>Mediatorial Diet</h4>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Tempora, labore!
+                Rich in fruits, vegetables, and healthy fats for a balanced
+                lifestyle!
               </p>
             </div>
           </div>
@@ -231,17 +222,11 @@
           <!-- Diet Plan card -->
           <div class="dietPlan-card">
             <div class="img">
-              <img
-                src="assets/fresh-salad-wooden-bowl-lunch-generative-ai.jpg"
-                alt=""
-              />
+              <img src="assets/vegan-diet.jpeg" alt="" />
             </div>
             <div class="text">
               <h4>Vegan Diet</h4>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Tempora, labore!
-              </p>
+              <p>Plant-based meals to support your cruelty-free lifestyle!</p>
             </div>
           </div>
         </div>
