Editing the 'testimonial' names

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <!-- Testimonial Card Start -->
             <div class="testimonial-card swiper-slide">
               <div class="img">
-                <img src="assets/img-1.jpg" alt="Mohamed Super" />
+                <img src="assets/img-1.jpg" alt="Mohammed Super" />
               </div>
               <div class="text">
                 <h4>Mohamed Super</h4>
@@ -259,7 +259,7 @@
             <!-- Testimonial Card Start -->
             <div class="testimonial-card swiper-slide">
               <div class="img">
-                <img src="assets/img-1.jpg" alt="Val-Sta" />
+                <img src="assets/img-1.jpg" alt="Igbokwe Valerie" />
               </div>
               <div class="text">
                 <h4>Val-Sta</h4>
@@ -274,7 +274,7 @@
             <!-- Testimonial Card Start -->
             <div class="testimonial-card swiper-slide" data-aos="zoom-in-up">
               <div class="img">
-                <img src="assets/img-1.jpg" alt="Ahmed I" />
+                <img src="assets/img-1.jpg" alt="Ahmed.I" />
               </div>
               <div class="text">
                 <h4>Ahmed I</h4>
